fixed background color in dark mode

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -171,7 +171,7 @@
   padding: 5px;
 }
 .image.editorModule tr:nth-child(2n) {
-  background: #eee;
+  background: var(--backgroundHighlightColor1);
 }
 .image.editorModule td {
   padding: 10px;
@@ -182,6 +182,7 @@
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), white;
   background-position: 0px 0, 5px 5px;
   background-size: 10px 10px, 10px 10px;
+  margin-bottom: 5px;
 }
 .image.editorModule td > input[type=checkbox] {
   float: left;
